# src

./: README.md
install/: local_setup.sh  setup.sh
install/joint_state_publisher/share/joint_state_publisher/: package.sh
install/joint_state_publisher_gui/share/joint_state_publisher_gui/: package.sh
install/pb2025_robot_description/share/pb2025_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pb2025_robot_description/share/pb2025_robot_description/cmake/: pb2025_robot_descriptionConfig-version.cmake  pb2025_robot_descriptionConfig.cmake
install/pb2025_robot_description/share/pb2025_robot_description/environment/: ament_prefix_path.dsv  gazebo.dsv  path.dsv
install/pb2025_robot_description/share/pb2025_robot_description/launch/: robot_description_launch.py
install/pb2025_robot_description/share/pb2025_robot_description/params/: robot_description.yaml
install/pb2025_robot_description/share/pb2025_robot_description/rviz/: visualize_robot.rviz
install/pb_option1_bringup/share/pb_option1_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pb_option1_bringup/share/pb_option1_bringup/cmake/: pb_option1_bringupConfig.cmake
install/pb_option1_description/share/pb_option1_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pb_option1_description/share/pb_option1_description/cmake/: pb_option1_descriptionConfig.cmake
install/pb_option1_navigation/share/pb_option1_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pb_option1_navigation/share/pb_option1_navigation/config/: amcl_params.yaml
install/pb_option1_navigation/share/pb_option1_navigation/launch/: localization.launch.py
install/pb_option1_navigation/share/pb_option1_navigation/maps/: map.pgm
install/pb_option1_sim/share/pb_option1_sim/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pb_option1_sim/share/pb_option1_sim/launch/: gazebo_with_objects.launch.py
install/pb_option1_vision/lib/pb_option1_vision/: command_interpreter  follow_behavior  object_detector
install/pb_option1_vision/share/pb_option1_vision/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pb_option1_vision/share/pb_option1_vision/cmake/: pb_option1_visionConfig-version.cmake  pb_option1_visionConfig.cmake
install/pb_option1_vision/share/pb_option1_vision/config/: detector_params.yaml  follow_params.yaml
install/pb_option1_vision/share/pb_option1_vision/environment/: path.dsv  (+1 more)
install/rmoss_gz_resources/share/rmoss_gz_resources/: local_setup.sh  package.sh
install/sdformat_tools/share/sdformat_tools/: package.sh
log/: latest_build
pb_option1_bringup/: CMakeLists.txt  package.xml  setup.py
pb_option1_bringup/launch/: sim.launch.py
pb_option1_description/: CMakeLists.txt
pb_option1_description/launch/: robot_description_launch.py
pb_option1_description/resource/xmacro/: simulation_robot.sdf.xmacro
pb_option1_navigation/: package.xml  setup.cfg  setup.py
pb_option1_navigation/config/: nav2_params.yaml  slam_params.yaml
pb_option1_navigation/launch/: nav2_bringup.launch.py  slam.launch.py
pb_option1_sim/: CMakeLists.txt
pb_option1_sim/launch/: gazebo_with_objects.launch.py
pb_option1_sim/worlds/: world.sdf
pb_option1_vision/: CMakeLists.txt  DEVELOPMENT.md  INSTALL.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py  test_system.py
pb_option1_vision/config/: detector_params.yaml  follow_params.yaml  vision.rviz
pb_option1_vision/include/pb_option1_vision/: object_detector.hpp
pb_option1_vision/launch/: vision_and_follow.launch.py
pb_option1_vision/models/: READEME.md  README.md  change.py  export_friendly_onnx.py  test.py
pb_option1_vision/pb_option1_vision/: __init__.py  object_detector.py
pb_option1_vision/rviz/: vision_config.rviz
pb_option1_vision/src/: command_interpreter_node.cpp  command_interpreter_node.py  follow_behavior_node.cpp  follow_behavior_node.py  object_detector.cpp  object_detector.py  object_detector_node.cpp  object_detector_node.py  test_hsv_with_morph.cpp  test_hsv_with_morph.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/config/real_robot/: nav2_params.yaml
src/my_robot_bringup/config/simulation/: nav2_params.yaml
src/my_robot_bringup/include/my_robot_bringup/: gazebo_manager.hpp  map_manager.hpp  navigation_core.hpp  slam_processor.hpp
src/my_robot_bringup/install/: local_setup.sh  setup.sh
src/my_robot_bringup/install/my_robot_bringup/lib/my_robot_bringup/: spawn_robots.py
src/my_robot_bringup/install/my_robot_bringup/share/ament_index/resource_index/package_run_dependencies/: my_robot_bringup
src/my_robot_bringup/install/my_robot_bringup/share/my_robot_bringup/: navigation.launch.py  package.sh  package.xml
src/my_robot_bringup/install/my_robot_bringup/share/my_robot_bringup/config/: competition_setup.yaml
src/my_robot_bringup/install/my_robot_bringup/share/my_robot_bringup/real_robot/: real_nav.launch.py  slam_params.yaml
src/my_robot_bringup/install/my_robot_bringup/share/my_robot_bringup/simulation/: gazebo_params.yaml  rmuc_2025.yaml  simulation.launch.py  simulation_nav.launch.py  slam_params.yaml
src/my_robot_bringup/launch/common/: navigation_core.launch.py
src/my_robot_bringup/launch/real_robot/: real_robot.launch.py  real_slam.launch.py
src/my_robot_bringup/launch/simulation/: simulation_slam.launch.py
src/my_robot_bringup/log/: latest_build
src/my_robot_bringup/maps/simulation/: rmul_2025.pgm  rmul_2025.yaml
src/my_robot_bringup/scripts/: map_converter.py
src/my_robot_bringup/src/: gazebo_manager.cpp  main.cpp  map_manager.cpp  navigation_core.cpp  slam_processor.cpp
src/my_robot_bringup/test/: CMakeLists.txt  test_navigation.cpp  test_slam_processor.cpp
src/my_robot_bringup/worlds/: empty_world.sdf
(+24 files in other folders)
