<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pb_option1_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch files for pb_option1 robot simulation with real camera</description>
  <maintainer email="2830532983@qq.com">chen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 核心依赖 -->
  <depend>rclpy</depend>
  <depend>ros2launch</depend>   <!-- 如果用到 IncludeLaunchDescription 等 -->

  <!-- Gazebo 和相关 -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- 摄像头 -->
  <exec_depend>usb_cam</exec_depend>

  <!-- 你的其他包 -->
  <exec_depend>pb_option1_description</exec_depend>
  <exec_depend>pb_option1_vision</exec_depend>

  <!-- 测试相关（可选） -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>