<?xml version="1.0"?>
<package format="3">
  <name>pb_option1_vision</name>
  <version>0.1.0</version>
  <description>Vision package with OpenCV in C++</description>
  <maintainer email="your@email.com">bowen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>          <!-- 图像桥接 -->
  <depend>opencv4</depend>            <!-- OpenCV (ROS2 包名可能为 opencv2 或系统安装) -->
  <depend>vision_msgs</depend>        <!-- Detection2DArray -->
  <depend>yaml-cpp</depend>           <!-- YAML 加载 -->
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>